--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -31,3 +31,18 @@ jobs:
         uses: trywilco/actions@main
         with:
           owner: ${{ github.repository_owner }}
+  Lint:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: Check out project
+        uses: actions/checkout@v2
+      - name: Lint code
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16'
+          cache: 'yarn'
+      - run: yarn install
+      - run: yarn lint
